k8s-resources/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-hello
spec:
  selector:
    app: my-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
